# monil-babo-bot

./: .dockerignore  .flake8  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: docker-image.yml
cogs/: babo.py  julgi_game.py
