[tool.poetry]
name = "monil-babo-bot"
version = "0.1.0"
description = ""
authors = ["Bingsu <ks2515@naver.com>"]

[tool.poetry.dependencies]
python = "^3.9"
aiohttp = {extras = ["speedups"], version = "^3.7.4"}
py-cord = {git = "https://github.com/Pycord-Development/pycord.git", extras = ["speed"]}
uvloop = {version = "^0.16.0", markers = "os_name != 'nt'"}
python-dotenv = "^0.19.0"

[tool.poetry.dev-dependencies]
black = "^21.9b0"
isort = "^5.9.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
