[tool.poetry]
name = "monil-babo-bot"
version = "0.2.0"
description = "모닐바보 디스코드 봇"
authors = ["Bingsu <ks2515@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = {extras = ["speedups"], version = "*"}
py-cord = {extras = ["speed"], version = "*"}
uvloop = {version = "*", markers = "os_name != 'nt'"}
python-dotenv = "*"
loguru = "*"

[tool.poetry.dev-dependencies]
black = "*"
isort = "*"
mypy = "*"
pre-commit = "*"
flake8 = "*"
flake8-bugbear = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
