[tool.poetry]
name = "monil-babo-bot"
version = "0.3.1"
description = "모닐바보 디스코드 봇"
authors = ["Bingsu <ks2515@naver.com>"]
readme = "README.md"
repository = "https://github.com/Bing-su/monil-babo-bot"

[tool.poetry.dependencies]
python = "^3.10"
py-cord = "^2.1.1"
uvloop = {version = "*", markers = "os_name != 'nt'"}
python-dotenv = "*"
loguru = "*"
julgi-game = "*"

[tool.poetry.group.dev.dependencies]
black = ">=22.6.0"
isort = "*"
mypy = "*"
pre-commit = "*"
flake8 = "*"
flake8-bugbear = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
